# mdbook-rust-doc

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
src/: domain.rs  lib.rs  main.rs
test-book/: book.toml
test-book/expected/: test.md
test-book/src/: SUMMARY.md  test.md
test-crate/: Cargo.toml
test-crate/src/: crustaceans.rs  lib.rs
