[package]
name = "mdbook-rust-doc"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
syn = {version = "1", features = ["extra-traits"]}
shellexpand = "2.1"
proc-macro2 = "1"
mdbook = "0.4"
pulldown-cmark-to-cmark = "6"
pulldown-cmark = "0.8"
semver = "1"
regex = "1"
lazy_static = "1"
