[package]
name = "mdbook-rust-doc"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.4"
lazy_static = "1"
mdbook = { version = "0.4", default_features = false, features = [] }
proc-macro2 = "1"
pulldown-cmark = "0.8"
pulldown-cmark-to-cmark = "6"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "2.1"
syn = {version = "1", features = ["extra-traits"]}
toml = "0.5"
