[package]
name = "mdbook-rust-doc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1"
mdbook = { version = "0.4.52", default-features = false, features = [] }
proc-macro2 = "1"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
regex = "1.11.2"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shellexpand = "3.1.1"
syn = { version = "2.0.106", features = ["full", "extra-traits", "parsing"] }
toml = "0.9.5"
